@@ -1,6 +1,14 @@
 FlightPath 4.x Changelog
 ========================
 
+2015-11-01
+  Fixed bug where groups were not fully populating during group_clone.
+  
+  Added concept of courses being assigned to more than one degree.  Edited AdvisingScreen object to reflect which
+  degree the course was assigned to.
+  
+  Continued working on combining degree logic.
+
 2015-10-31
   Added settings to School Data form in system.module, so we can set up "classifications" of majors.  Edited the admin.degrees.inc file to use these new options,
   added function to misc.inc to get all the options as an array for ease of use.
